[gd_scene load_steps=22 format=2]

[ext_resource path="res://terrain/Crop.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/crops/CROP_EGGPLANT.tres" type="Texture" id=2]
[ext_resource path="res://assets/textures/crops/CROP_TURNIP.tres" type="Texture" id=3]
[ext_resource path="res://assets/textures/crops/CROP_ROSE.tres" type="Texture" id=4]
[ext_resource path="res://assets/textures/crops/CROP_CUCUMBER.tres" type="Texture" id=5]
[ext_resource path="res://assets/textures/crops/CROP_LEMON.tres" type="Texture" id=6]
[ext_resource path="res://assets/textures/crops/CROP_PINEAPPLE.tres" type="Texture" id=7]
[ext_resource path="res://assets/textures/crops/CROP_RICE.tres" type="Texture" id=8]
[ext_resource path="res://assets/textures/crops/CROP_WHEAT.tres" type="Texture" id=9]
[ext_resource path="res://assets/textures/crops/CROP_GRAPES.tres" type="Texture" id=10]
[ext_resource path="res://assets/textures/crops/CROP_STRAWBERRY.tres" type="Texture" id=11]
[ext_resource path="res://assets/textures/crops/CROP_CASSAVA.tres" type="Texture" id=12]
[ext_resource path="res://assets/textures/crops/CROP_POTATO.tres" type="Texture" id=13]
[ext_resource path="res://assets/textures/crops/CROP_COFFEE.tres" type="Texture" id=14]
[ext_resource path="res://assets/textures/crops/CROP_AVOCADO.tres" type="Texture" id=15]
[ext_resource path="res://assets/textures/crops/CROP_ORANGE.tres" type="Texture" id=16]
[ext_resource path="res://assets/textures/crops/CROP_CORN.tres" type="Texture" id=17]
[ext_resource path="res://assets/textures/crops/CROP_TULIP.tres" type="Texture" id=18]
[ext_resource path="res://assets/textures/crops/CROP_TOMATO.tres" type="Texture" id=19]
[ext_resource path="res://assets/textures/crops/CROP_MELON.tres" type="Texture" id=20]
[ext_resource path="res://assets/textures/crops/CROP_SUNFLOWER.tres" type="Texture" id=21]

[node name="Crop" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="SpriteContainer" type="Node2D" parent="."]

[node name="CROP_TURNIP" type="Sprite" parent="SpriteContainer"]
texture = ExtResource( 3 )

[node name="CROP_ROSE" type="Sprite" parent="SpriteContainer"]
visible = false
texture = ExtResource( 4 )

[node name="CROP_CUCUMBER" type="Sprite" parent="SpriteContainer"]
visible = false
texture = ExtResource( 5 )

[node name="CROP_TULIP" type="Sprite" parent="SpriteContainer"]
visible = false
texture = ExtResource( 18 )

[node name="CROP_TOMATO" type="Sprite" parent="SpriteContainer"]
visible = false
texture = ExtResource( 19 )

[node name="CROP_MELON" type="Sprite" parent="SpriteContainer"]
visible = false
texture = ExtResource( 20 )

[node name="CROP_EGGPLANT" type="Sprite" parent="SpriteContainer"]
visible = false
texture = ExtResource( 2 )

[node name="CROP_LEMON" type="Sprite" parent="SpriteContainer"]
visible = false
texture = ExtResource( 6 )

[node name="CROP_PINEAPPLE" type="Sprite" parent="SpriteContainer"]
visible = false
texture = ExtResource( 7 )

[node name="CROP_RICE" type="Sprite" parent="SpriteContainer"]
visible = false
texture = ExtResource( 8 )

[node name="CROP_WHEAT" type="Sprite" parent="SpriteContainer"]
visible = false
texture = ExtResource( 9 )

[node name="CROP_GRAPES" type="Sprite" parent="SpriteContainer"]
visible = false
texture = ExtResource( 10 )

[node name="CROP_STRAWBERRY" type="Sprite" parent="SpriteContainer"]
visible = false
texture = ExtResource( 11 )

[node name="CROP_CASSAVA" type="Sprite" parent="SpriteContainer"]
visible = false
texture = ExtResource( 12 )

[node name="CROP_POTATO" type="Sprite" parent="SpriteContainer"]
visible = false
texture = ExtResource( 13 )

[node name="CROP_COFFEE" type="Sprite" parent="SpriteContainer"]
visible = false
texture = ExtResource( 14 )

[node name="CROP_AVOCADO" type="Sprite" parent="SpriteContainer"]
visible = false
texture = ExtResource( 15 )

[node name="CROP_ORANGE" type="Sprite" parent="SpriteContainer"]
visible = false
texture = ExtResource( 16 )

[node name="CROP_CORN" type="Sprite" parent="SpriteContainer"]
visible = false
texture = ExtResource( 17 )

[node name="CROP_SUNFLOWER" type="Sprite" parent="SpriteContainer"]
visible = false
texture = ExtResource( 21 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -4, 1, -5, 4, -5, 5, -4, 8, -1, 9, 1, 9, 5, 8, 6, 5, 6, 4, 5, 1, 1, 0, 0, 0 )
disabled = true

[node name="NavigationPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -6, -1, -6, 10, 7, 10, 7, -1 )
disabled = true

[node name="NavigationDestination" type="Node2D" parent="."]
position = Vector2( 0, 12 )
